# LISAanalysistools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  bulk_gb_search.py  dev_grad.py  dev_mbh_gf_search.py  dev_tf_wave_setup.py  emcee_backend_test.py  emri_example.py  find_samples_for_flows.py  fish_check.py  fisher_matrix_check.ipynb  form_initial_mbh_psd_residual_information_after_search.py  full_band_global_fit_settings.py  gather_gb_samples.py  generate_many_single_posteriors.py  global_fit_settings.py  gmm_development.py  initial_iterative_search.py  initial_psd_search.py  install.sh  make_current_plot.py  mbh_pe_example.py  mbh_search_test.py  mbh_test_search.py  mono_to_emri.py  monochromatic.py  new_try.py  out_params_3.5_to_4Hz.npy  pe_global_fit.py  plot_gbs_posteriors.py  pyproject.toml  requirements-data.txt  requirements-dev.txt  requirements-release.txt  (+21 more)
.github/workflows/: pages.yml  publish.yml  run-tests.yml
docs/: Makefile
docs/doctrees/: README.doctree  environment.pickle  index.doctree  lisatools_tutorial.doctree
docs/doctrees/user/: main.doctree
docs/examples_ucb/: README.rst
docs/html/: .buildinfo  README.html  genindex.html  index.html  lisatools_tutorial.html  lisatools_tutorial.ipynb  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/user/: main.html
docs/source/: conf.py  index.rst  lisatools_tutorial.ipynb
docs/source/examples_ucb/: index.rst  sg_execution_times.rst
docs/source/tutorial/: lisatools_tutorial.ipynb
docs/source/user/: datacontainer.rst  detector.rst  main.rst  sensitivity.rst  sources.rst  stochastic.rst  utility.rst
examples/: Diagnostics.ipynb  Sensitivity.ipynb  Tutorial1.ipynb  lisatools_tutorial.ipynb  space_2050_tutorial.ipynb  vgbs.txt  wrappers.py
examples/space_2050_models/: DO_conservative_sensitivity_AET.csv  DO_optimal_sensitivity_AET.csv  LISA_sensitivity_AET.csv  LISAmax_sensitivity_AET.csv  lisamax_orbits.h5  muAres_sensitivity_AET.csv
global_fit_input/: emri_and_psd_global_fit_setting.py  emri_mbh_psd_global_fit_setting.py  emri_only_global_fit_settings.py  gb_and_foreground_global_fit_settings.py  global_fit_settings.py  mbh_only_global_fit_settings.py  psd_only_global_fit_settings.py
include/: Detector.hpp
lisatools/: _version.py  analysiscontainer.py  datacontainer.py  detector.py  diagnostic.py  glitch.py  sensitivity.py  stochastic.py
lisatools/cutils/include/: Detector.hpp  PSD.hpp
lisatools/cutils/src/: Detector.cu  PSD.cu  psdgen.pyx  pycppdetector.pyx
lisatools/globalfit/: buildcatalog.py  galaxyglobal.py  gathergalaxy.py  generatefuncs.py  hdfbackend.py  mbhglobal.py  mbhsearch.py  pipeline.py  plot.py  psdglobal.py  recipe.py  run.py  state.py
lisatools/globalfit/moves/: __init__.py  addremovemove.py  gbspecialstretch.py  globalfitmove.py  mbhspecialmove.py  psdmove.py
lisatools/orbit_files/: equalarmlength-orbits.h5  esa-trailing-orbits.h5
lisatools/pipeline/: pipeline.py
lisatools/sampling/: gmm.py  likelihood.py  nonstatlike.py  plot.py  prior.py  samplingguide.py  stopping.py  utility.py
lisatools/sampling/moves/: bruterejection.py  gaussian.py  gbbruterejectionrj.py  gbfreqjump.py  gbgroupstretch.py  gbmultipletryrj.py  gbspecialgroupstretch.py  gbspecialstretch.py  globalfish.py  mbhspecialmove.py  placeholder.py  ptredblue.py  skymodehop.py  specialforegroundmove.py
lisatools/sampling/samplers/: emcee.py  ptemcee.py
lisatools/sources/: __init__.py  defaultresponse.py  utils.py  waveformbase.py
lisatools/sources/bbh/: __init__.py  waveform.py
lisatools/sources/emri/: __init__.py  tdiwaveform.py  waveform.py
lisatools/sources/gb/: __init__.py  waveform.py
lisatools/utils/: constants.py  multigpudataholder.py  pointeradjust.py  tdi.py  transform.py  utility.py
mojito_input/: mbh_psd_global_fit_settings.py  psd_only_global_fit_settings.py
scripts/: data_download.py  generate-changelog.bash  install-hooks.bash  post-commit.bash  prebuild.py  run-tests.bash  run_global.py  to_conda.bash
src/: CMakeLists.txt  Detector.cpp  pycppdetector.pyx
src/lisatools/: CMakeLists.txt  __init__.py  _version.py  analysiscontainer.py  datacontainer.py  detector.py  diagnostic.py  domains.py  git_version.py.in  mojito_detector.py  sensitivity.py  stochastic.py
src/lisatools/cutils/: CMakeLists.txt  Detector.cu  Detector.hpp  L1Detector.cu  L1Detector.hpp  PSD.cu  PSD.hpp  __init__.py  binding.cxx  binding.hpp  global.hpp  psd_likelihood_utils.py  psdgen.pyx  pycppdetector.pxd  pycppdetector.pyx
src/lisatools/globalfit/: buildcatalog.py  diagnosticplot.py  engine.py  galaxyglobal.py  gathergalaxy.py  generatefuncs.py  hdfbackend.py  loginfo.py  mbhglobal.py  mbhsearch.py  pipeline.py  plot.py  preprocessing.py  psdglobal.py  recipe.py  run.py  state.py  utils.py
src/lisatools/globalfit/moves/: __init__.py  addremovemove.py  gbspecialstretch.py  globalfitmove.py  mbhspecialmove.py  psdmove.py
src/lisatools/globalfit/stock/: erebor.py
src/lisatools/orbit_files/: equalarmlength-orbits-best-fit-to-esa.h5  equalarmlength-orbits.h5
src/lisatools/sampling/: gmm.py  likelihood.py  prior.py  stopping.py  utility.py
src/lisatools/sampling/moves/: skymodehop.py
src/lisatools/sources/: __init__.py  defaultresponse.py  utils.py  waveformbase.py
src/lisatools/sources/bbh/: waveform.py
src/lisatools/sources/emri/: chebyshevwave.py  waveform.py
src/lisatools/sources/gb/: waveform.py
src/lisatools/utils/: constants.py  exceptions.py  multigpudataholder.py  parallelbase.py  utility.py
tests/: test_detector.py  test_orbits.py  test_sensitivity.py
