[build-system]
requires = [
  "Cython",
  "numpy",
  "scikit_build_core",
  "eryn",
  "pybind11",
  "gpubackendtools",  # @ file:///home/mlkatz/GPUBackendTools",  # ==0.0.15 
]
build-backend = "scikit_build_core.build"

[project]
name = "lisaanalysistools" #@NAMESUFFIX@

description = "A package for LISA Data Analysis"

authors = [
  { name = "Michael Katz", email = "mikekatz04@gmail.com" },
]
readme = "README.md"

requires-python = ">= 3.10"

dependencies = [
  "exceptiongroup; python_version<'3.11'", # To access ExceptionGroup with Python 3.9 and 3.10
  "h5py",
  "matplotlib",
  "jsonschema",                            # To validate content of file registry
  "lisaconstants",
  "multispline",
  "numba",
  "numpy",
  "nvidia-ml-py",                          # To detect CUDA version if any
  "platformdirs",                          # To locate config and data dir on all platforms
  "pydantic",                              # To handle citations and references with advanced dataclasses
  "pyyaml",                                # To read file registry
  "requests",                              # To download files automatically
  "rich",                                  # To display downlaod progress bar
  "scipy",
  "tqdm",
  "wrapt",
  #@DEPS_CUPYCUDA@,
  #@DEPS_LISATOOLSCORE@,
]


classifiers = [
  "Environment :: GPU :: NVIDIA CUDA",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: C++",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = [ "version" ]

optional-dependencies.doc = [
  "ipykernel",
  "ipython",
  "ipywidgets",
  "myst-parser",
  "nbsphinx",
  "pypandoc",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-tippy",
  "corner",
]

optional-dependencies.sampling = [
  # "eryn",
  "fastlisaresponse",
  "corner",
  "chainconsumer",
]

optional-dependencies.testing = [
  "matplotlib",
  # "eryn",
  "gbgpu",
  "corner",
]

[tool.setuptools_scm]
version_scheme = "only-version"  # "no-guess-dev"
local_scheme = "no-local-version" #  "node-and-date"
version_file = "src/lisatools/_version.py"

[tool.scikit-build]
wheel.packages = ["src/lisatools"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = [
  "src/lisatools/_version.py",
  "src/lisatools/git_version.py",                 #@SKIP_PLUGIN@
  "src/lisatools_backend_cuda11x/git_version.py",
  "src/lisatools_backend_cuda12x/git_version.py",
  "src/lisatools_backend_cpu/libdetector.a",
  "src/lisatools_backend_cuda11x/libdetector_gpu.a",
  "src/lisatools_backend_cuda12x/libdetector_gpu.a",
  "tests/",
  "src/lisatools/cutils/Detector.cu",
  "src/lisatools/cutils/pycppdetector.pyx",
  # "src/lisatools/cutils/pycppdetector.pxd",
  "src/lisatools/cutils/Detector.hpp",
  "src/lisatools/cutils/global.hpp",
  "src/lisatools/cutils/binding.cxx",
  "src/lisatools/cutils/binding.hpp",
]
sdist.exclude = [
  ".devcontainer/",
  ".github/",
  "dataset-preprocessing/",
  "docs/",
  "examples/",
  ".cmake-format.yaml",
  ".gitignore",
  ".pre-commit-config.yaml",
  "src/lisatools/_editable.py",
  "tests/base.py",
]

wheel.exclude = [
  # "**.pyx",
  # "**.cu",
  # "**.cxx",
  # "**.hh",
  #"**.h",
  # "**.hpp",
  "**/CMakeLists.txt",
  "lib/pkgconfig",
  "lib/cmake",
  "lib/*.so",
  "lib/*.a",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.coverage]
paths.source = [
  "src/",
  "**/site-packages/",
]

report.omit = [
  "*/lisatools/_version.py",
  "*/lisatools/tests/*.py",
  "*/lisatools/git_version.py",
  "*/lisatools_backend_*/git_version.py",
]
